--- a/Idle Factory/Base.lproj/LaunchScreen.storyboard
+++ b/Idle Factory/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,29 +14,40 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M2V-nW-x6p">
-                                <rect key="frame" x="20" y="44" width="374" height="818"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo00" translatesAutoresizingMaskIntoConstraints="NO" id="M2V-nW-x6p">
+                                <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="industries-park" translatesAutoresizingMaskIntoConstraints="NO" id="hJH-OA-2WX">
+                                <rect key="frame" x="0.0" y="30" width="200" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Va0-XE-VES"/>
+                                    <constraint firstAttribute="width" constant="200" id="bZQ-Pf-GE1"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="M2V-nW-x6p" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="63c-i7-dcW"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="M2V-nW-x6p" secondAttribute="bottom" id="Ns9-xV-B4n"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="M2V-nW-x6p" secondAttribute="trailing" id="Zg9-ZN-cUi"/>
-                            <constraint firstItem="M2V-nW-x6p" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="brB-dx-imM"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="4Ak-ai-pTj"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-60" id="HjD-uG-qpv"/>
+                            <constraint firstItem="hJH-OA-2WX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="RIe-de-nDo"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kJB-me-TJi"/>
+                            <constraint firstAttribute="bottom" secondItem="M2V-nW-x6p" secondAttribute="bottom" id="pnM-NG-dvl"/>
+                            <constraint firstItem="hJH-OA-2WX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="vz5-3k-nai"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="51.5625" y="373.91304347826087"/>
         </scene>
     </scenes>
     <resources>
+        <image name="fundo00" width="1920" height="1080"/>
+        <image name="industries-park" width="804" height="369"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
