--- a/Idle Factory/Base.lproj/LaunchScreen.storyboard
+++ b/Idle Factory/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo00" translatesAutoresizingMaskIntoConstraints="NO" id="M2V-nW-x6p">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo00" translatesAutoresizingMaskIntoConstraints="NO" id="M2V-nW-x6p">
                                 <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="industries-park" translatesAutoresizingMaskIntoConstraints="NO" id="hJH-OA-2WX">
@@ -31,11 +31,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="M2V-nW-x6p" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="4Ak-ai-pTj"/>
-                            <constraint firstItem="M2V-nW-x6p" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-60" id="HjD-uG-qpv"/>
                             <constraint firstItem="hJH-OA-2WX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="RIe-de-nDo"/>
-                            <constraint firstItem="M2V-nW-x6p" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kJB-me-TJi"/>
-                            <constraint firstAttribute="bottom" secondItem="M2V-nW-x6p" secondAttribute="bottom" id="pnM-NG-dvl"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="YdJ-3M-gpo"/>
+                            <constraint firstAttribute="trailing" secondItem="M2V-nW-x6p" secondAttribute="trailing" id="ZUk-ac-qDt"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="af6-kH-EZj"/>
+                            <constraint firstAttribute="bottom" secondItem="M2V-nW-x6p" secondAttribute="bottom" id="c0W-49-epc"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sCY-ZP-rY2"/>
+                            <constraint firstItem="M2V-nW-x6p" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="svP-0a-TdT"/>
                             <constraint firstItem="hJH-OA-2WX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="vz5-3k-nai"/>
                         </constraints>
                     </view>
